--- a/file-initialisation.ipynb
+++ b/file-initialisation.ipynb
@@ -223,6 +223,14 @@
     "import pandas as pd\n",
     "pd.read_csv('data.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92a694e0",
+   "metadata": {},
+   "source": [
+    "#### Hopefully this section has helped you in setting up your python files and environments. "
+   ]
   }
  ],
  "metadata": {
