--- a/variables.ipynb
+++ b/variables.ipynb
@@ -202,6 +202,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f796d2dd",
+   "metadata": {},
+   "source": [
+    "We can also perform mathmatical functions on these variables, even strings.\n",
+    "\n",
+    "Obviously `+`, `-`, `*` and `/` do what you expect to floats and integers. For powers we use `**`.\n",
+    "\n",
+    "Some of these can be used on strings as well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "f7df0c09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "hello hello hello \n",
+      "5\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"hello \"\n",
+    "b = \"world\"\n",
+    "print(a + b)\n",
+    "print(a * 3)\n",
+    "\n",
+    "c = 2\n",
+    "d = 3\n",
+    "print(c + d)\n",
+    "print(c ** d)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "65bc9422",
    "metadata": {},
    "source": [
