--- a/loops-and-conditions.ipynb
+++ b/loops-and-conditions.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f0eb3814",
    "metadata": {},
    "outputs": [
@@ -56,6 +56,9 @@
       "name\n",
       "age\n",
       "height\n",
+      "Georgia\n",
+      "23\n",
+      "5.1\n",
       "name: Georgia\n",
       "age: 23\n",
       "height: 5.1\n"
@@ -118,7 +121,77 @@
    "source": [
     "The loop above simply loops while the length or `len` of the list is greater than 0. The contents of the loop removes the last item from the list and prints it. So it loops through four times then ends.\n",
     "\n",
-    "Below is a different "
+    "Below is a different implimentation if you are after a loop that runs for a specific number of loops:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "25bf6bac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 4:\n",
+    "    print(i)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e80efa96",
+   "metadata": {},
+   "source": [
+    "### If statements\n",
+    "\n",
+    "While not being specifically a loop, an if statement is similar to a while loop in that it only occurs if the statement is met.\n",
+    "\n",
+    "The section below is a basic implimentation of a if statement:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7a230632",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Goodbye\n"
+     ]
+    }
+   ],
+   "source": [
+    "variable_a = 4\n",
+    "\n",
+    "if variable_a < 2:\n",
+    "    print(\"Hello\")\n",
+    "\n",
+    "if variable_a > 2:\n",
+    "    print(\"Goodbye\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ec8b8d5",
+   "metadata": {},
+   "source": [
+    "You can see that only the second if statement printed to console as the variable met the requirements of the if statement\n",
+    "\n",
+    "#### Hopefully this section has helped you learn about loops and conditional statements in Python"
    ]
   }
  ],
