--- a/variables.ipynb
+++ b/variables.ipynb
@@ -331,7 +331,7 @@
    "id": "eed5568e",
    "metadata": {},
    "source": [
-    "#### Hopefully this sectioned has helped you learn about variable types in Python"
+    "#### Hopefully this section has helped you learn about variable types in Python"
    ]
   }
  ],
