--- a/variables.ipynb
+++ b/variables.ipynb
@@ -207,14 +207,16 @@
    "source": [
     "We can also perform mathmatical functions on these variables, even strings.\n",
     "\n",
-    "Obviously `+`, `-`, `*` and `/` do what you expect to floats and integers. For powers we use `**`.\n",
+    "Obviously `+`, `-`, `*` and `/` do what you expect to floats and integers. For powers we use `**`, and % is a modulo operator; it returns the remainder of the division. Both `+` and `*` can be used on strings as well.\n",
     "\n",
-    "Some of these can be used on strings as well"
+    "There is also the standard use of greater than `>`, less than `<`, greater than or equal to `>=`, and less than or equal to `<=`. If you want to know if two values are equal than we use two equals signs so `==`, one ill simply set the value of the first one to the second value. Finally if you want not equal to then we use `!=`. These can be used on number types as well as string types. They will return a boolean value (True or False) and are often used in if statements and while loopsm which we will cover later.\n",
+    "\n",
+    "Check out some examples of usage below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 73,
    "id": "f7df0c09",
    "metadata": {},
    "outputs": [
@@ -224,8 +226,13 @@
      "text": [
       "hello world\n",
       "hello hello hello \n",
-      "5\n",
-      "8\n"
+      "10\n",
+      "2187\n",
+      "1\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
      ]
     }
    ],
@@ -235,11 +242,23 @@
     "print(a + b)\n",
     "print(a * 3)\n",
     "\n",
-    "c = 2\n",
-    "d = 3\n",
+    "c = 3\n",
+    "d = 7\n",
     "print(c + d)\n",
-    "print(c ** d)\n"
+    "print(c ** d)\n",
+    "print(d % c)\n",
+    "\n",
+    "print(c > d)\n",
+    "print(c < d)\n",
+    "print(c >= d)\n",
+    "print(c <= d)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7626313",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
