--- a/loops-and-conditions.ipynb
+++ b/loops-and-conditions.ipynb
@@ -186,11 +186,93 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec8b8d5",
+   "id": "cb0692d3",
    "metadata": {},
    "source": [
     "You can see that only the second if statement printed to console as the variable met the requirements of the if statement\n",
     "\n",
+    "However instead of having these conditions in sepearate statements we can combine them using `elif`. This stands for else if and means that if the first statement is not true then it will see if it fits the requirements of the second statement. You can use as mant of these statements as you want. Alternatively, you can use `else` which will be the final part of your statement and will always run if none of the other `if` or `elif` statement requirements are met.\n",
+    "\n",
+    "See some examples below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bd836606",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Goodbye\n",
+      "Goodbye\n"
+     ]
+    }
+   ],
+   "source": [
+    "variable_b = 9\n",
+    "\n",
+    "if variable_b < 2:\n",
+    "    print(\"Hello\")\n",
+    "elif variable_b > 8:\n",
+    "    print(\"Goodbye\")\n",
+    "\n",
+    "if variable_a < 2:\n",
+    "    print(\"Hello\")\n",
+    "else:\n",
+    "    print(\"Goodbye\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "242eca23",
+   "metadata": {},
+   "source": [
+    "For both an if statement and a while loop, if you need them to pass multiple requirements we can use logical operators.\n",
+    "\n",
+    "If you need both requirements to be met then we use `and` between the two. If you want one or the other we use `or`. Finally if you want the condition to return its opposite then we put our statements into a `not()` function if they are numeric or a string, if they are boolean then we just put it infront of the variable. Note that for boolean variables, we dont need to be as speciic in our `if` or `while` statements. If we want the conditions to be met we simply would use `if boolean_variable:` if it was true and `if not boolean_variable:` if it was false.\n",
+    "\n",
+    "See some examples of these below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "451ab58a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi\n",
+      "At least one of the variables is greater than the threshold\n"
+     ]
+    }
+   ],
+   "source": [
+    "greeting = True\n",
+    "polite = False\n",
+    "\n",
+    "if greeting and polite:\n",
+    "    print(\"Hello, how are you?\")\n",
+    "elif greeting and not polite:\n",
+    "    print(\"Hi\")\n",
+    "else:\n",
+    "    print(\"...\")\n",
+    "\n",
+    "if variable_a > 2 or variable_b > 8:\n",
+    "    print(\"At least one of the variables is greater than the threshold\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ec8b8d5",
+   "metadata": {},
+   "source": [
     "#### Hopefully this section has helped you learn about loops and conditional statements in Python"
    ]
   }
