--- a/variables.ipynb
+++ b/variables.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "id": "f7df0c09",
    "metadata": {},
    "outputs": [
@@ -231,8 +231,7 @@
       "1\n",
       "False\n",
       "True\n",
-      "False\n",
-      "True\n"
+      "False\n"
      ]
     }
    ],
@@ -249,16 +248,94 @@
     "print(d % c)\n",
     "\n",
     "print(c > d)\n",
-    "print(c < d)\n",
-    "print(c >= d)\n",
-    "print(c <= d)\n"
+    "print(c <= d)\n",
+    "print(c == d)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "c7626313",
    "metadata": {},
-   "source": []
+   "source": [
+    "If we want to manipulate strings, there are various commands that we can use.\n",
+    "\n",
+    "If you want to turn a string into a list of words we can use the `.split()` command, this by default will split the string and add every word as a different entry in a list for every whitespace. You can change this to any character you want by adding it inside the brackets. To do the reverse, that is turn a list in one string we use the `\" \".join(list_name)` command, where the \" \" means to put a whitespace between each item, but this can be changed. \n",
+    "\n",
+    "To remove the whitespace (default) or any other character from the start or end of a string, we use the `.strip()` command. You can also change the character removed by adding it to the brackets. \n",
+    "\n",
+    "If you want to change the case/capitalisation of a string there are a few methods we can utilise. `.upper()` will change every letter to a capital, `.lower()` will do the oppisite. `.title()` will capitalise the first letter of each word and `.capitalize` will just do it to the first letter in the entire string.\n",
+    "\n",
+    "To locate specific words or substrings within a string we use the `.find(substring)` command. This will return the index at which this word starts. \n",
+    "\n",
+    "If you want to replace a word or substring, we can use the `.replace(\"old_word\", \"new_word\")` method.\n",
+    "\n",
+    "You can check out some examples of these in the code below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "34ab1d4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello', 'World']\n",
+      "Hello World\n",
+      "Hello World\n",
+      " hello world\n",
+      " HELLO WORLD\n",
+      " Goodbye World\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_1= \" Hello World\"\n",
+    "list_1 = [\"Hello\", \"World\"]\n",
+    "print(string_1.split())\n",
+    "print(\" \".join(list_1))\n",
+    "print(string_1.strip(\" \"))\n",
+    "print(string_1.lower())\n",
+    "print(string_1.upper())\n",
+    "print(string_1.replace(\"Hello\", \"Goodbye\"))\n",
+    "print(string_1.find(\"World\"))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f85b2454",
+   "metadata": {},
+   "source": [
+    "If you want to print a combination of a set string with a varible inside it then we can use something called f-strings.\n",
+    "\n",
+    "Formatting these is easy we simply put an `f` infront of the quotation marks in the print statement, then any variable you want printed will be in {}\n",
+    "\n",
+    "Check below for an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "ffc5f3ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Georgia and I am 23 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Georgia\"\n",
+    "age = 23\n",
+    "print(f\"My name is {name} and I am {age} years old\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,7 +387,7 @@
    "id": "b7ad31b1",
    "metadata": {},
    "source": [
-    "For a dictonary it varies slightly. We add and change an item in the same way. \n",
+    "For a dictonary it varies slightly. We add and change an item in the same format. \n",
     "\n",
     "Using the format `dict_name[key] = 8` if the unique key alreadly exists then it will change the value to the new one, otherwise it will create a new entry with that key as its identifier. To remove an item by key we once again use the `.pop()` command. We can also use the `.popitem()` command to remove the last added item to the dictionary.\n",
     "\n",
